--- a/package.json
+++ b/package.json
@@ -40,6 +40,17 @@
   "engines": {
     "node": ">=20"
   },
+  "pnpm": {
+    "overrides": {
+      "fastify": ">=5.7.2",
+      "axios": ">=1.13.5",
+      "@isaacs/brace-expansion": ">=5.0.1",
+      "qs": ">=6.14.2",
+      "webpack": ">=5.104.1",
+      "lodash": ">=4.17.23",
+      "diff": ">=4.0.4"
+    }
+  },
   "devDependencies": {
     "@vitest/coverage-v8": "3",
     "concurrently": "^9.2.1",
